# rusthack

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: creatures.rs  dice.rs  input.rs  main.rs  stats.rs
