[package]
name = "rusthack"
version = "0.0.1-SNAPSHOT"
authors = ["Juho Hiltunen"]
description = "A game used primarily for teaching myself Rust"
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = "2.2.0"
diceroll = "0.1.0"
getopts = "0.2.21"
rand = "0.8.5"
